# urn-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-0BSD.md  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  cliff.toml  rustfmt.toml
.github/: dependabot.yaml
benches/: builder_accessors.rs  fixtures.rs  parse.rs  percent.rs  serde.rs  setters.rs
src/: cow.rs  lib.rs  namespace.rs  owned.rs  percent.rs  serde.rs  tables.rs
