[package]
name = "urn"
version = "0.7.0"
edition = "2021"
readme = "README.md"
authors = ["chayleaf <chayleaf-cratesio@pavluk.org>"]
description = "A crate for handling URNs (Unique Resource Names)"
repository = "https://github.com/chayleaf/urn/"
license = "0BSD OR MIT OR Apache-2.0"
keywords = ["urn", "uri", "iana", "namespace", "parser"]
categories = ["parser-implementations", "web-programming", "encoding"]
autobenches = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
std = ["alloc"]
default = ["std"]
alloc = ["serde?/alloc"]
nightly = []

[dependencies]
serde = { version = "1.0.228", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "percent"
harness = false

[[bench]]
name = "builder_accessors"
harness = false

[[bench]]
name = "setters"
harness = false

[[bench]]
name = "serde"
harness = false
required-features = ["serde"]
