[package]
name = "urn-rs"
description = "Parse, validate, and build URNs per RFC 8141"
version = "0.8.0"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "chayleaf <chayleaf-cratesio@pavluk.org>",
    "Matej Škvarč <matej.skvarc@senlab.io>",
]
license = "0BSD OR MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mskvarc/urn-rs/"
keywords = ["urn", "uri", "iana", "namespace", "parser"]
categories = ["parser-implementations", "web-programming", "encoding"]
autobenches = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
std = ["alloc"]
default = ["std"]
alloc = ["serde?/alloc"]
ngsi-ld = []
uuid = []
uuid-typed = ["uuid", "dep:uuid"]

[dependencies]
serde = { version = "1.0.228", default-features = false, optional = true }
uuid = { version = "1.23.1", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "percent"
harness = false

[[bench]]
name = "builder_accessors"
harness = false

[[bench]]
name = "setters"
harness = false

[[bench]]
name = "serde"
harness = false
required-features = ["serde"]
