[package]
name = "urn-rs"
description = "Parse, validate, and build URNs per RFC 8141"
version = "0.9.2"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "chayleaf <chayleaf-cratesio@pavluk.org>",
    "Matej Škvarč <matej.skvarc@senlab.io>",
]
license = "0BSD OR MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mskvarc/urn-rs/"
keywords = ["urn", "uri", "iana", "namespace", "parser"]
categories = ["parser-implementations", "web-programming", "encoding"]
autobenches = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
std = ["alloc"]
default = ["std"]
alloc = ["serde?/alloc"]
# Compare/hash/order the entire URN (including r/q/f-components) instead of
# only the RFC 8141 §3 equivalence portion (scheme + NID + NSS).
exact-eq = []

[dependencies]
serde = { version = "1.0.228", default-features = false, optional = true }
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
criterion = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
get_unwrap = "deny"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
used_underscore_binding = "warn"
missing_const_for_fn = "warn"
branches_sharing_code = "warn"
cloned_instead_of_copied = "warn"
unnecessary_self_imports = "warn"
redundant_clone = "warn"
needless_collect = "warn"
map_unwrap_or = "deny"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "percent"
harness = false

[[bench]]
name = "builder_accessors"
harness = false

[[bench]]
name = "setters"
harness = false

[[bench]]
name = "serde"
harness = false
required-features = ["serde"]
